# real-estate-gam-dbt

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
data/: raw_real_estate_transactions.csv
experiments/: baseline_gam.yaml
real_estate_dbt/: dbt_project.yml
real_estate_dbt/models/features/: gam_features.sql  schema.yml
real_estate_dbt/models/marts/: fct_prices.sql  schema.yml
real_estate_dbt/models/staging/: schema.yml  stg_transactions.sql
real_estate_gam/: __init__.py  config.py  run_gam.py
real_estate_gam/evaluation/: metrics.py
real_estate_gam/experiments/: load_experiment.py  parse_experiment.py
real_estate_gam/features/: schema.py
real_estate_gam/models/: gam.py
real_estate_gam/real_estate_gam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reports/: gam_report.qmd
src/: run_gam.py
src/data/: config.py  load_features.py
src/evaluation/: plots.py
src/experiments/: load_experiment.py
src/features/: build_matrix.py  schema.py
src/models/: gam.py
tests/: test_gam.py  test_load_features.py
