[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "real-estate-gam"
version = "0.1.0"
dependencies = [
  "numpy",
  "pandas",
  "matplotlib",
  "pygam",
  "sqlalchemy",
  "scikit-learn",
  "PyYAML",
  "pyarrow",
]

[tool.setuptools]
packages = ["real_estate_gam"]
